modify prompt of reactive mail

--- a/src/Jili/ApiBundle/Resources/translations/validators.zh_CN.yml
+++ b/src/Jili/ApiBundle/Resources/translations/validators.zh_CN.yml
@@ -1,4 +1,4 @@
-user_email_has_not_been_activated: 邮箱已经被使用,需要重新激活
+user_email_has_not_been_activated: 该邮箱已被使用，请到邮箱查找激活邮件，还有问题？请联系support@91wenwen.com
 user_email_has_been_activated: 邮箱已经被使用
 user_nickname_is_unavailable:  用户昵称已经存在
 password_is_invalid: 密码无效
